[gd_scene load_steps=19 format=2]

[ext_resource path="res://entities/input/keyboard_plus_gui.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/world/client_world.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tcp/client.gd" type="Script" id=3]
[ext_resource path="res://entities/debug_overlay/debug_overlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/tcp/tcp_client.gd" type="Script" id=5]
[ext_resource path="res://entities/latency_simulator/latency_simulator.gd" type="Script" id=6]
[ext_resource path="res://entities/input/keyboard_shortcuts.gd" type="Script" id=7]
[ext_resource path="res://entities/ui/banner.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/ui/console.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/world/interpolated_world.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/world/extrapolated_world.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/world/predicted_world.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/kbps/kbps.gd" type="Script" id=13]
[ext_resource path="res://entities/menu_button/menu_button.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/server_tick_sync/server_tick_sync.gd" type="Script" id=15]
[ext_resource path="res://entities/world/server_reconciliation.gd" type="Script" id=16]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0.00392157, 0.384314, 1, 0.23587, 0.248374, 0.460938, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Client" type="Node"]
script = ExtResource( 3 )

[node name="DebugOverlay" parent="." instance=ExtResource( 4 )]
offset = Vector2( 800, 380 )
transform = Transform2D( 1, 0, 0, 1, 800, 380 )

[node name="TCPClient" type="Node" parent="."]
script = ExtResource( 5 )

[node name="LatencySimulator" type="Node" parent="."]
script = ExtResource( 6 )
simulate_latency = false
min_latency = 0.03
max_latency = 0.15

[node name="Background" type="TextureRect" parent="."]
margin_left = 608.0
margin_top = -712.0
margin_right = 2108.0
margin_bottom = 788.0
rect_rotation = 44.9999
mouse_filter = 2
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LatestReceivedWorld" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.25098, 0.25098, 0.560784, 0.196078 )

[node name="InterpolatedWorld" parent="." instance=ExtResource( 10 )]
modulate = Color( 0.501961, 0.501961, 0, 0.196078 )

[node name="ExtrapolatedWorld" parent="." instance=ExtResource( 11 )]
modulate = Color( 0.501961, 0, 0.501961, 0.196078 )

[node name="PredictedWorld" parent="." instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0.501961 )
enable = false

[node name="Inputs" type="Node" parent="."]

[node name="Input" parent="Inputs" instance=ExtResource( 1 )]

[node name="KeyboardShortcuts" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" parent="UI" instance=ExtResource( 8 )]

[node name="Console" parent="UI" instance=ExtResource( 9 )]
margin_left = 305.0
margin_top = 470.0
margin_right = -475.0
margin_bottom = 6.10352e-05

[node name="MenuButton" parent="UI" instance=ExtResource( 14 )]

[node name="ReceivedKbps" type="Node" parent="."]
script = ExtResource( 13 )

[node name="SentKbps" type="Node" parent="."]
script = ExtResource( 13 )

[node name="ServerTickSync" type="Node" parent="."]
script = ExtResource( 15 )

[node name="ServerReconciliation" type="Node2D" parent="."]
script = ExtResource( 16 )
