[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/input/keyboard_plus_gui.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/world/client_world.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tcp/client.gd" type="Script" id=3]
[ext_resource path="res://entities/web_socket/web_socket_client.gd" type="Script" id=5]
[ext_resource path="res://entities/ui/console.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/input/keyboard_shortcuts.gd" type="Script" id=7]
[ext_resource path="res://entities/ui/banner.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/world/ui_interpolation.gd" type="Script" id=9]


[node name="Client" type="Node"]
script = ExtResource( 3 )

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource( 5 )

[node name="LatestReceivedWorld" parent="." instance=ExtResource( 2 )]
position = Vector2( -1, 0 )

[node name="Inputs" type="Node" parent="."]

[node name="Input" parent="Inputs" instance=ExtResource( 1 )]

[node name="KeyboardShortcuts" type="Node" parent="."]
script = ExtResource( 7 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" parent="UI" instance=ExtResource( 8 )]

[node name="Console" parent="UI" instance=ExtResource( 6 )]
margin_left = 305.0
margin_right = 805.0

[node name="Button" type="Button" parent="UI"]
margin_left = 18.0
margin_top = 15.0
margin_right = 108.0
margin_bottom = 97.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interpolation" type="CheckButton" parent="UI"]
margin_left = 19.0
margin_top = 118.0
margin_right = 182.0
margin_bottom = 158.0
pressed = true
text = "Interpolation"
script = ExtResource( 9 )
